fix(InfoboxNeue): fix contrast for yellow badge

--- a/InfoboxNeue/styles.css
+++ b/InfoboxNeue/styles.css
@@ -315,7 +315,7 @@
 
 .infobox__indicator.infobox__indicator--yellow .infobox__data {
     background-color: var(--color-warning);
-    color: #fff;
+    color: #000;
 }
 
 .infobox__indicator.infobox__indicator--green .infobox__data {
